--- a/cover.html
+++ b/cover.html
@@ -11,7 +11,7 @@
 <body>
 <div class="all" id="all">
   <div class="face" id="back" onclick="showBlock(this,'back-tab')">
-    <canvas></canvas>
+    <canvas id="back_src"></canvas>
   </div>
   <div class="center" id="title" onclick="showBlock(this,'center-tab')" style="width: 20mm;">
     Title of the book
@@ -27,31 +27,35 @@
   <button class="w3-bar-item w3-button" onclick="showBlock(this,'center-tab')">Center</button>
   <button class="w3-bar-item w3-button" onclick="showBlock(this,'back-tab')">Back</button>
 </div>
-<fieldset class="col measure" id="back-tab" style="display: none;">
-  <legend class="f4 ph1">Back</legend>
-  <div class="mt1">
-  <label class="db fw6 lh-copy f6" for="back_file">Image</label>
-  <input type="file" id="back_file" name="files[]" onchange="handleFileSelect(this)" data-dst="back" /></div>
-  <div class="mv1"><label class="db fw6 lh-copy f6" for="back_file">Background</label>
-  <input type="color" id="back_bg" value="#ffffff" onchange="changeAttribute(this)" data-dst="back" data-attr="background"/></div>
+<fieldset class="col measure" id="front-tab">
+  <legend class="f4 ph1">Front</legend>
+  <div><label class="db fw6 lh-copy f6" for="front_file"> Image</label>
+  <input type="file" id="front_file" name="files[]" onchange="fileSelect(this,'front')"/></div>
+  <div><label class="db fw6 lh-copy f6" for="front_bg"> Background</label>
+  <input type="color" id="front_bg" value="#ffffff" onchange="changeAttribute(this,'front','background')"/>
+  <a href="#" onclick="createImage('source')">Pick Color</a></div>
+  <div><label class="db fw6 lh-copy f6" for="front_wd"> Width</label>
+  <input type="text" id="front_wd" value="100mm" onchange="changeAttribute(this,'front','width'); changeAttribute(this,'back','width')"/></div>
+  <div><label class="db fw6 lh-copy f6" for="front_height"> Height</label>
+  <input type="text" id="front_height" value="131mm" onchange="changeAttribute(this,'all','height')"/></div>
 </fieldset>
 <fieldset class="col measure" id="center-tab" style="display: none;">
   <legend class="f4 ph1">Center</legend>
   <div class="dt dt--fixed"><div class="dtc">
   <div><label class="db fw6 lh-copy f6" for="back_file">Text</label>
-  <input type="text" value="Title of the Book" onchange="updateTitle(this)" data-dst="title"></div>
+  <input type="text" value="Title of the Book" onchange="updateTitle(this)"></div>
   <div><label class="db fw6 lh-copy f6" for="back_file">Background</label>
-  <input type="color" value="#ffffff" onchange="changeAttribute(this)" data-dst="title" data-attr="background"/></div>
+  <input type="color" value="#ffffff" onchange="changeAttribute(this,'title','background')"/></div>
   <div><label class="db fw6 lh-copy f6" for="back_file"> Foreground</label>
-  <input type="color" value="#000000" onchange="changeAttribute(this)" data-dst="title" data-attr="color"/></div>
+  <input type="color" value="#000000" onchange="changeAttribute(this,'title','color')"/></div>
   <div><label class="db fw6 lh-copy f6" for="back_file"> Width</label>
-  <input type="text" value="20mm" onchange="changeAttribute(this)" data-dst="title" data-attr="width"/></div>
+  <input type="text" value="20mm" onchange="changeAttribute(this,'title','width')"/></div>
   </div>
   <div class="dtc">
   <div><label class="db fw6 lh-copy f6" for="back_file"> Line Size</label>
-  <input type="text" value="20mm" onchange="changeAttribute(this)" data-dst="title" data-attr="line-height"/></div>
+  <input type="text" value="20mm" onchange="changeAttribute(this,'title','line-height')"/></div>
   <div><label class="db fw6 lh-copy f6" for="back_file"> Font Size</label>
-  <input type="text" value="15mm" onchange="changeAttribute(this)" data-dst="title" data-attr="font-size"/></div>
+  <input type="text" value="15mm" onchange="changeAttribute(this,'title','font-size')"/></div>
   <div><label class="db fw6 lh-copy f6" for="back_file"> Font</label>
     <select class="f6" id="selectFontFamily" name="selectFontFamily" onchange="updateFontfamily(this)">
       <option> Serif </option>
@@ -77,16 +81,13 @@
   </div>
   </div>
 </fieldset>
-<fieldset class="col measure" id="front-tab">
-  <legend class="f4 ph1">Front</legend>
-  <div><label class="db fw6 lh-copy f6" for="front_file"> Image</label>
-  <input type="file" id="front_file" data-dst="front" name="files[]" onchange="handleFileSelect(this)"/></div>
-  <div><label class="db fw6 lh-copy f6" for="back_file"> Background</label>
-  <input type="color" value="#ffffff" onchange="changeAttribute(this)" data-dst="front" data-attr="background" /></div>
-  <div><label class="db fw6 lh-copy f6" for="back_file"> Width</label>
-  <input type="text" value="100mm" onchange="changeAttribute(this)" data-dst="front" data-attr="width"/></div>
-  <div><label class="db fw6 lh-copy f6" for="back_file"> Height</label>
-  <input type="text" value="131mm" onchange="changeAttribute(this)" data-dst="all" data-attr="height"/></div>
+<fieldset class="col measure" id="back-tab" style="display: none;">
+  <legend class="f4 ph1">Back</legend>
+  <div class="mt1">
+  <label class="db fw6 lh-copy f6" for="back_file">Image</label>
+  <input type="file" id="back_file" name="files[]" onchange="fileSelect(this,'back')"/></div>
+  <div class="mv1"><label class="db fw6 lh-copy f6" for="back_bg">Background</label>
+  <input type="color" id="back_bg" value="#ffffff" onchange="changeAttribute(this,'back','background')"/></div>
 </fieldset>
 </div>
 
@@ -99,28 +100,24 @@
   </div>
   <div id="zoomer">
     <div id="coord"></div>
-    <canvas id="zoomed"></canvas>
+    <canvas id="zoomed" style="max-width: initial; max-height: inherit;"></canvas>
     <canvas id="crosshair" width="11px" height="11px"></canvas>
   </div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script>
-// TODO: update back width
-var back  = document.getElementById('back');
+// var back  = document.getElementById('back');
 var title = document.getElementById('title');
-var front = document.getElementById('front');
+// var front = document.getElementById('front');
 // var canvas = document.getElementById('source');
 // var ctx = canvas.getContext('2d');
 
 // handle file selection. Update image
-function handleFileSelect(tgt) {
-  var dst = tgt.dataset.dst
+function fileSelect(tgt, dst) {
   var files = tgt.files; // FileList object
-
   for (var i = 0, f; f = files[i]; i++) {
-    // Only process image files.
-    if (!f.type.match('image.*')) {
+    if (!f.type.match('image.*')) { // Only process image files.
       continue;
     }
     var reader = new FileReader();
@@ -130,13 +127,13 @@ function handleFileSelect(tgt) {
       return function(e) {
         let img = new Image();
         img.onload = function() {
-                img.title =  escape(theFile.name);
-                console.log(img.title, img.width, img.height, img.src);
-                // document.getElementById(dst).appendChild(img);
-                let c = document.getElementById(dst).getElementsByTagName("canvas")[0];
-                c.width = img.width;
-                c.height = img.height;
-                c.getContext('2d').drawImage(img, 0, 0);
+          img.title =  escape(theFile.name);
+          console.log(img.title, img.width, img.height);
+          // document.getElementById(dst).appendChild(img);
+          let c = document.getElementById(dst).getElementsByTagName("canvas")[0];
+          c.width = img.width;
+          c.height = img.height;
+          c.getContext('2d').drawImage(img, 0, 0);
         };
         img.src = e.target.result;
       };
@@ -156,13 +153,10 @@ function loadFont(tgt) {
   }
 }
 
-function changeAttribute(tgt) {
-  var dst = tgt.dataset.dst
-  var attr = tgt.dataset.attr
+function changeAttribute(tgt, dst, attr) {
   var col = tgt.value;
   console.log(dst, attr, col)
-  var doc = document.getElementById(dst);
-  doc.style[attr] = col;
+  document.getElementById(dst).style[attr] = col;
 }
 
 function updateFontfamily(selector) {
@@ -187,9 +181,9 @@ function updateTitle(tgt) {
 function showBlock(tgt, dst) {
   var doc = document.getElementById(dst);
   document.getElementById('back-tab').style.display = "none";
-  document.getElementById('center-tab').style["display"] = "none";
-  document.getElementById('front-tab').style["display"] = "none";
-  doc.style["display"] = "block";
+  document.getElementById('center-tab').style.display = "none";
+  document.getElementById('front-tab').style.display = "none";
+  doc.style.display = "block";
   tablinks = document.getElementsByClassName("w3-bar-item");
   for (i = 0; i < tablinks.length; i++) {
     tablinks[i].className = tablinks[i].className.replace(" w3-red", "");
@@ -198,77 +192,102 @@ function showBlock(tgt, dst) {
 }
 
 function openTab(tabName) {
-  var i;
   var x = document.getElementsByClassName("tab");
-  for (i = 0; i < x.length; i++) {
+  for (var i = 0; i < x.length; i++) {
     x[i].style.display = "none";
   }
   document.getElementById(tabName).style.display = "block";
 }
 
+function componentToHex(c) {
+  var hex = c.toString(16)
+  return hex.length == 1 ? "0" + hex : hex
+}
+
+function rgbToHex(r, g, b) {
+  return '#' + componentToHex(r) + componentToHex(g) + componentToHex(b)
+}
+
+function drawCrosshair(r, g, b) {
+  var ctx = document.getElementById('crosshair').getContext('2d')
+  ctx.strokeStyle = 'rgba(' + r + ',' + g + ',' + b + ',0.25)'
+  ctx.beginPath()
+  ctx.moveTo(5.5, 0)
+  ctx.lineTo(5.5, 4)
+  ctx.stroke()
+  ctx.beginPath()
+  ctx.moveTo(7, 5.5)
+  ctx.lineTo(11, 5.5)
+  ctx.stroke()
+  ctx.beginPath()
+  ctx.moveTo(5.5, 7)
+  ctx.lineTo(5.5, 11)
+  ctx.stroke()
+  ctx.beginPath()
+  ctx.moveTo(0, 5.5)
+  ctx.lineTo(4, 5.5)
+  ctx.stroke()
+}
+
+
+info = document.getElementById("info");
+zoomed = document.getElementById('zoomed');
+zoomer= document.getElementById("zoomer");
+coord= document.getElementById("coord");
+hex_hover= document.getElementById("hex-hover");
+rgb_hover= document.getElementById("rgb-hover");
+color_hover= document.getElementById("color-hover");
+ztx = zoomed.getContext('2d');
+
 // “Update details” button opens the <dialog> modally
-  function createImage(source) {
-    var img = new Image()
-    img.onload = function() {
-      $('#info').show().mouseleave(function() {
-        $(this).find('input').blur()
-      })
+function createImage(canvas_id) {
+  // info.onmouseleave = function() {
+  //   $(this).find('input').blur()
+  // };
 
-      var zoomed = document.getElementById('zoomed');
-      var ztx = zoomed.getContext('2d');
-      var zoom = 3;
+  const zoom = 3;
+  var canvas = document.getElementById(canvas_id);
+  var ctx = canvas.getContext('2d');
+  let img = new Image()
+img.onload = function() {
+  zoomed.width = img.width * zoom
+  zoomed.height = img.height * zoom
+  ztx.imageSmoothingEnabled = false
+  ztx.mozImageSmoothingEnabled = false
+  ztx.webkitImageSmoothingEnabled = false
+  // ztx.putImageData(img, 0, 0)
+  ztx.drawImage(img, 0, 0, zoomed.width, zoomed.height)
 
-      zoomed.width = img.width * zoom
-      zoomed.height = img.height * zoom
-      ztx.imageSmoothingEnabled = false
-      ztx.mozImageSmoothingEnabled = false
-      ztx.webkitImageSmoothingEnabled = false
-      ztx.drawImage(img, 0, 0, zoomed.width, zoomed.height)
+  info.style.display = "block";
 
-      var canvas = document.getElementById('source');
-      var ctx = canvas.getContext('2d');
+  canvas.onmousemove = function(e) {
+    var x = e.offsetX/canvas.clientWidth *canvas.width,
+	y = e.offsetY/canvas.clientHeight*canvas.height,
+	d = ctx.getImageData(x, y, 1, 1).data,
+	r = d[0], g = d[1], b = d[2],
+	ir = 255 - r, ig = 255 - g, ib = 255 - b,
+	hex = rgbToHex(r, g, b),
+	inv = rgbToHex(ir, ig, ib);
 
-      canvas.width = img.width
-      canvas.height = img.height
-      ctx.drawImage(img, 0, 0)
+    // console.log( x + ' x ' + y, hex);
+    coord.innerHtml = x + ' x ' + y;
+    coord.style.color= inv;
+    hex_hover.value = hex;
+    rgb_hover.value = r + ',' + g + ',' + b;
+    color_hover.style.background= hex;
 
-      $('#board').show()
+    zoomed.style.left= -(zoom * e.offsetX) + (zoomer.offsetWidth) / 2;
+    zoomed.style.top = -(zoom * e.offsetX) + (zoomer.offsetHeight) / 2;
+  console.log( -(zoom * e.offsetX) + (zoomer.offsetWidth) / 2,
+	-(zoom * e.offsetX) + (zoomer.offsetHeight) / 2,
+	zoom * e.offsetX, zoomer.offsetWidth,
+	zoom * e.offsetX, zoomer.offsetHeight);
 
-      $(canvas)
-      .mousemove(function(e) {
-        var x = e.pageX
-          , y = e.pageY
-          , d = ctx.getImageData(x, y, 1, 1).data
-          , r = d[0]
-          , g = d[1]
-          , b = d[2]
-          , ir = 255 - r
-          , ig = 255 - g
-          , ib = 255 - b
-          , hex = rgbToHex(r, g, b)
-          , inv = rgbToHex(ir, ig, ib)
-
-        $('#coord').html(x + ' x ' + y).css('color', inv)
-        $('#hex-hover').val(hex)
-        $('#rgb-hover').val(r + ',' + g + ',' + b)
-        $('#color-hover').css('background', hex)
-
-        $('#zoomed')
-        .css('left', -(zoom * x) + ($('#zoomer').width() - 3) / 2)
-        .css('top', -(zoom * y) + ($('#zoomer').height() - 3) / 2)
-
-        drawCrosshair(ir, ig, ib)
-      })
-      .contextmenu(function() {
-        $('#rgb-saved').val($('#rgb-hover').val())
-        $('#hex-saved').val($('#hex-hover').val())
-        $('#color-saved').css('background', $('#hex-hover').val())
-        return false
-      })
-    }
-    img.src = source
-  }
-
+    drawCrosshair(ir, ig, ib)
+  };
+}
+  img.src=canvas.toDataURL()
+}
 </script>
 </body>
 </html>
